--- a/NamesList/en.lproj/MainStoryboard.storyboard
+++ b/NamesList/en.lproj/MainStoryboard.storyboard
@@ -44,7 +44,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yM1-ln-Eyf">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yM1-ln-Eyf">
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -53,7 +53,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbI-RI-Q0l">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Done">
+                                <state key="normal" title="Save">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -61,7 +61,20 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="done:" destination="UhV-p1-okk" eventType="touchUpInside" id="Dqr-5s-RYG"/>
+                                    <action selector="save:" destination="UhV-p1-okk" eventType="touchUpInside" id="ACs-Ep-cB6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0c2-FI-SQf">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancel:" destination="UhV-p1-okk" eventType="touchUpInside" id="Lw1-iR-cna"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -69,6 +82,8 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="yM1-ln-Eyf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="BS6-Ca-aPr"/>
                             <constraint firstItem="yM1-ln-Eyf" firstAttribute="top" secondItem="XC8-bc-mQv" secondAttribute="top" constant="134" id="I1X-W5-FuB"/>
+                            <constraint firstAttribute="trailing" secondItem="0c2-FI-SQf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Pba-xi-r1F"/>
+                            <constraint firstItem="0c2-FI-SQf" firstAttribute="top" secondItem="XC8-bc-mQv" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Z0R-cj-PDz"/>
                             <constraint firstItem="yM1-ln-Eyf" firstAttribute="leading" secondItem="XC8-bc-mQv" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="cEV-EV-rpZ"/>
                             <constraint firstItem="sbI-RI-Q0l" firstAttribute="top" secondItem="XC8-bc-mQv" secondAttribute="top" constant="20" symbolic="YES" type="default" id="pig-jm-WIT"/>
                             <constraint firstItem="sbI-RI-Q0l" firstAttribute="leading" secondItem="XC8-bc-mQv" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="sKc-S1-GvT"/>
@@ -76,7 +91,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="dFe-TX-K5M"/>
                     <connections>
+                        <outlet property="cancelButton" destination="0c2-FI-SQf" id="W6o-qq-CBB"/>
                         <outlet property="nameField" destination="yM1-ln-Eyf" id="nFX-dC-8vM"/>
+                        <outlet property="saveButton" destination="sbI-RI-Q0l" id="3F3-1f-o84"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c3e-In-8s8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -91,9 +108,12 @@
         <class className="BSViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BSViewController.h"/>
             <relationships>
-                <relationship kind="action" name="done:"/>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="save:"/>
                 <relationship kind="action" name="textFieldReturn:"/>
+                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
